Naprawa Gemini i Foursquare