@@ -12,13 +12,16 @@ import java.util.Map;
 @Component
 public class GeminiClient {
     private static final Logger log = LoggerFactory.getLogger(GeminiClient.class);
+
     private final RestClient restClient;
     private final String apiUrl;
     private final String apiKey;
 
-    public GeminiClient(RestClient restClient,
-                        @Value("${api.gemini.url}") String apiUrl,
-                        @Value("${api.gemini.key}") String apiKey) {
+    public GeminiClient(
+            RestClient restClient,
+            @Value("${api.gemini.url}") String apiUrl,
+            @Value("${api.gemini.key}") String apiKey
+    ) {
         this.restClient = restClient;
         this.apiUrl = apiUrl;
         this.apiKey = apiKey;
@@ -32,37 +35,42 @@ public class GeminiClient {
 
         try {
             String prompt = String.format(
-                "Jesteś profesjonalnym agentem AI wspierającym planowanie podróży. Stwórz spersonalizowany, szczegółowy plan 1-dniowej wycieczki dla miasta: %s.\n" +
-                "Aktualna Pogoda: %.1f°C, %s.\n" +
-                "Popularne atrakcje i ciekawe miejsca w mieście pobrane z API (Foursquare):\n%s\n\n" +
-                "Wymagania dla planu:\n" +
-                "1. Przedstaw plan w postaci sformatowanego, estetycznego dokumentu Markdown (z podziałem na Rano, Popołudnie, Wieczór).\n" +
-                "2. Dostosuj sugestie bezpośrednio do aktualnej pogody (np. jeśli pada deszcz, zaproponuj muzea, galerie, restauracje i inne atrakcje zamknięte; jeśli jest ciepło i słonecznie, zaproponuj spacery po parkach, punkty widokowe na świeżym powietrzu).\n" +
-                "3. Napisz w planie co warto ze sobą zabrać w oparciu o pogodę (np. parasol, okulary przeciwsłoneczne, lekki ubiór, ciepły ubiór).\n" +
-                "4. Odpowiedz w języku polskim (pl).",
-                city, temp, weatherDesc, String.join("\n", placesInfo)
+                    "Jesteś profesjonalnym agentem AI wspierającym planowanie podróży. " +
+                            "Stwórz spersonalizowany, szczegółowy plan 1-dniowej wycieczki dla miasta: %s.\n" +
+                            "Aktualna pogoda: %.1f°C, %s.\n" +
+                            "Popularne atrakcje i ciekawe miejsca w mieście pobrane z API (Foursquare):\n%s\n\n" +
+                            "Wymagania dla planu:\n" +
+                            "1. Przedstaw plan w postaci sformatowanego dokumentu Markdown z podziałem na Rano, Popołudnie i Wieczór.\n" +
+                            "2. Dostosuj sugestie bezpośrednio do aktualnej pogody.\n" +
+                            "3. Napisz, co warto ze sobą zabrać w oparciu o pogodę.\n" +
+                            "4. Odpowiedz po polsku.",
+                    city,
+                    temp,
+                    weatherDesc,
+                    String.join("\n", placesInfo)
             );
 
             Map<String, Object> requestBody = Map.of(
-                "contents", List.of(
-                    Map.of("parts", List.of(Map.of("text", prompt)))
-                )
+                    "contents", List.of(
+                            Map.of("parts", List.of(Map.of("text", prompt)))
+                    )
             );
 
-            String url = apiUrl + "?key=" + apiKey;
-            
             GeminiResponse response = restClient.post()
-                .uri(url)
-                .body(requestBody)
-                .retrieve()
-                .body(GeminiResponse.class);
+                    .uri(apiUrl + "?key={key}", apiKey)
+                    .body(requestBody)
+                    .retrieve()
+                    .body(GeminiResponse.class);
 
             if (response != null && response.candidates() != null && !response.candidates().isEmpty()) {
-                var candidate = response.candidates().get(0);
-                if (candidate.content() != null && candidate.content().parts() != null && !candidate.content().parts().isEmpty()) {
-                    return candidate.content().parts().get(0).text();
+                Candidate candidate = response.candidates().getFirst();
+                if (candidate.content() != null
+                        && candidate.content().parts() != null
+                        && !candidate.content().parts().isEmpty()) {
+                    return candidate.content().parts().getFirst().text();
                 }
             }
+
             return null;
         } catch (Exception e) {
             log.error("Error calling Gemini API, falling back to local planner", e);
@@ -70,9 +78,15 @@ public class GeminiClient {
         }
     }
 
-    // Gemini DTOs
-    public record GeminiResponse(List<Candidate> candidates) {}
-    public record Candidate(Content content) {}
-    public record Content(List<Part> parts) {}
-    public record Part(String text) {}
+    public record GeminiResponse(List<Candidate> candidates) {
+    }
+
+    public record Candidate(Content content) {
+    }
+
+    public record Content(List<Part> parts) {
+    }
+
+    public record Part(String text) {
+    }
 }
